--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "browser-sync": "^2.26.3",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-cache": "^1.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.11.0"
   },
   "dependencies": {}
 }
