--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.26.3",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-cache": "^1.1.1",
     "gulp-concat": "^2.6.1",
