--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-imagemin": "^5.0.3"
+  }
 }
